packages/build/tests/error/fixtures/cancel_post_deploy/plugin.js
module.exports = {
  async onEnd({
    utils: {
      build: { cancelBuild },
    },
  }) {
    cancelBuild('test')
  },
}
